# Software-Engineering-Team

Software-Engineering-Team-main/software_engineering_team/: README.md  pyproject.toml  requirements.txt
Software-Engineering-Team-main/software_engineering_team/src/software_engineering_team/: app.py  crew.py  main.py  user_interface.py
Software-Engineering-Team-main/software_engineering_team/src/software_engineering_team/config/: agents.yaml  tasks.yaml
Software-Engineering-Team-main/software_engineering_team/src/software_engineering_team/src/components/: VideoDetail.js
Software-Engineering-Team-main/software_engineering_team/src/software_engineering_team/utils/: write_output.py
Software-Engineering-Team-main/software_engineering_team/src/software_engineering_team/video_streaming_platform/: frontend_setup.txt  main.py  requirements.txt
Software-Engineering-Team-main/software_engineering_team/src/software_engineering_team/video_streaming_platform/editing_service/: editing_service.py
Software-Engineering-Team-main/software_engineering_team/src/software_engineering_team/video_streaming_platform/integration_service/: integration_service.py
Software-Engineering-Team-main/software_engineering_team/src/software_engineering_team/video_streaming_platform/notification_service/: notification_service.py
Software-Engineering-Team-main/software_engineering_team/src/software_engineering_team/video_streaming_platform/output/: software_design.md
Software-Engineering-Team-main/software_engineering_team/src/software_engineering_team/video_streaming_platform/src/: App.js
(+17 files in other folders)
