[project]
name = "software_engineering_team"
version = "0.1.0"
description = "software_engineering_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
software_engineering_team = "software_engineering_team.main:run"
run_crew = "software_engineering_team.main:run"
train = "software_engineering_team.main:train"
replay = "software_engineering_team.main:replay"
test = "software_engineering_team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
config_path = "src/software_engineering_team/config"

[tool.hatch.build.targets.wheel]
packages = ["src/software_engineering_team"]

